# Find

./: .agents.md  .dockerignore  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GSSOC_CONTRIBUTOR_GUIDE.md  README.md  docker-compose.light.yml  docker-compose.yml  package-lock.json
.github/: SECURITY.md  copilot-instructions.md
.macroscope/: ignore
backend/: .dockerignore  Dockerfile  VAULT_DEPLOY_NOTES.md  alembic.ini  migrate_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260521_hidden_vault_schema.py  20260528_vault_state_metadata.py  add_duplicate_of_to_media.py
backend/scripts/: manual_ocr_check.py  smoke_hybrid_embedding.py
backend/src/find_api/: main.py
backend/src/find_api/core/: auth.py  config.py  crypto.py  database.py  dependencies.py  model_manager.py  queue.py  recovery.py  sqlite_queue.py  sqlite_vec_poc.py  storage.py  storage_abstract.py  storage_factory.py  storage_local.py  storage_minio.py  storage_thumbnails.py
backend/src/find_api/ml/: captioner.py  clip_embedder.py  clusterer.py  face_detector.py  mock_embedder.py  object_detector.py  ocr.py  search_ranking.py
backend/src/find_api/models/: __init__.py  face.py  feedback.py  invite.py  join_request.py  media.py  person.py  session.py  user.py  vault.py
backend/src/find_api/routers/: auth.py  cluster.py  clusters.py  config.py  duplicates.py  feedback.py  gallery.py  people.py  search.py  status.py  upload.py  vault.py
backend/src/find_api/services/: duplicate_service.py  query_cache.py
backend/src/find_api/utils/: errors.py  exif.py
backend/src/find_api/workers/: jobs.py  processors.py  sqlite_worker.py
backend/tests/: conftest.py  test_auth.py  test_cluster_images_regression.py  test_clustering_edge_cases.py  test_clusters.py  test_duplicate_service.py  test_feedback.py  test_gallery.py  test_hybrid_embedding.py  test_migrate_db.py  test_model_lazy_loading.py  test_model_manager.py  test_ocr.py  test_people.py  test_queue_integration.py  test_recovery.py  test_remote_ml_config.py  test_reprocess.py  test_search.py  test_sqlite_queue.py  test_sqlite_vec_poc.py  test_status.py  test_storage_facade.py  test_storage_factory.py  test_storage_local.py  test_thumbnails.py  test_upload.py  test_vault.py
docs/: AGENT_SECURITY.md  COMMON_SETUP_ERRORS.md  DESKTOP_RUNTIME_DETAILED_COMPARISON.md  DESKTOP_RUNTIME_QUICK_REFERENCE.md  PERSONALIZATION_RESEARCH.md  TAURI_PROTOTYPE.md  bulk-rename-metadata-design.md  desktop-runtime-design-adr.md  index.md  installable-local-first-architecture-roadmap.md  pr-triage-dry-run.md  reprocess-retry.md  small-team-authentication.md  vault-encryption-design.md  vector-search-benchmarks.md
frontend/: .dockerignore  Dockerfile  biome.json  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
testsprite_tests/: PRD.md  README.md  (+3 more)
(+68 files in other folders)
