[project]
name = "find-backend"
version = "1.0.0"
description = "FastAPI backend and RQ worker for Find"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.135.1,<0.136",
  "uvicorn[standard]>=0.43.0,<0.44",
  "python-multipart>=0.0.20,<0.1",
  "pydantic>=2.13.1,<3",
  "pydantic-settings>=2.12.0,<3",
  "sqlalchemy>=2.0.45,<2.1",
  "alembic>=1.17.2,<2",
  "psycopg2-binary>=2.9.11,<3",
  "pgvector==0.2.4",
  "minio==7.2.3",
  "redis==5.0.1",
  "rq>=2.6.1,<3",
  "pillow>=12.2.0",
  "scikit-learn==1.5.0",
  "numpy==1.26.3",
  "scipy==1.12.0",
  "cython<3",
  "piexif==1.1.3",
  "imagehash==4.3.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-dotenv==1.2.2",
  "httpx>=0.28.1,<0.29",
  "aiofiles>=25.1.0,<26",
]

[project.optional-dependencies]
ml = [
  "torch==2.2.0+cu121",
  "torchvision==0.17.0+cu121",
  "transformers>=4.57.6,<5",
  "open-clip-torch>=2.24.0",
  "opencv-python-headless==4.9.0.80",
  "ultralytics>=8.2.0",
  "insightface==0.7.3",
  "onnxruntime-gpu==1.17.0",
  "timm>=0.9.16",
  "einops>=0.8.0",
  "paddlepaddle>=3.2.2,<3.3",
  "paddleocr>=3.5.0,<4",
  "hdbscan==0.8.40",
  "faiss-cpu>=1.13.2,<1.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==0.23.3",
  "black==26.3.1",
  "ruff==0.1.14",
  "pip-audit==2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
