[package]
name = "find-desktop"
version = "0.0.1"
description = "Find - Local AI Image Intelligence desktop shell"
authors = []
edition = "2021"

[lib]
name = "find_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
